# template

./: .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: test.yaml
hooks/: post_gen_project.py
{{ cookiecutter.plugin }}/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
{{ cookiecutter.plugin }}/.github/workflows/: test.yaml
{{ cookiecutter.plugin }}/tests/: conftest.py  test_route.py
{{ cookiecutter.plugin }}/{{ cookiecutter.plugin.lower().replace('-','_') }}/: __init__.py  route.py
