[tool.poetry]
name = "{{ cookiecutter.plugin }}"
version = "0.1.0"
description = ""
authors = ["{{ cookiecutter.username }} <{{ cookiecutter.email }}>"]

[tool.poetry.dependencies]
python = "^3.6.2"
rsserpent = "^0.1.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
uvicorn = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
